--- a/serverless.yml
+++ b/serverless.yml
@@ -1,22 +1,15 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-
 service: big-mouth 
 
-# package:
-#   excludeDevDependencies: false
+plugins:
+  - serverless-pseudo-parameters
 
 provider:
   name: aws
   runtime: nodejs6.10
+  iamRoleStatements:
+     - Effect: Allow
+       Action: dynamodb:scan
+       Resource: arn:aws:dynamodb:#{AWS::Region}:#{AWS::AccountId}:table/restaurants
 
 functions:
   get-index:
@@ -25,3 +18,28 @@ functions:
       - http:
           path: /
           method: get
+
+  get-restaurants:
+    handler: functions/get-restaurants.handler
+    events:
+      - http:
+          path: /restaurants/
+          method: get
+    environment:
+      restaurants_table: restaurants
+
+resources:
+  Resources:
+    restaurantsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: restaurants
+        AttributeDefinitions:
+          - AttributeName: name
+            AttributeType: S
+        KeySchema:
+          - AttributeName: name
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
