Added search-restaurants function and Cognito security for /restaurants/search endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -23,6 +23,8 @@ functions:
           method: get
     environment:
       restaurants_api: https://tcipt8vpc1.execute-api.us-east-1.amazonaws.com/dev/restaurants
+      cognito_user_pool_id: us-east-1_e1vVtAD6r
+      cognito_client_id: 6eugosdpmt7pa214c0ne6ta0k
 
   get-restaurants:
     handler: functions/get-restaurants.handler
@@ -31,6 +33,17 @@ functions:
           path: /restaurants/
           method: get
           authorizer: aws_iam
+    environment:
+      restaurants_table: restaurants
+
+  search-restaurants:
+    handler: functions/search-restaurants.handler
+    events:
+      - http:
+          path: /restaurants/search
+          method: post
+          authorizer:
+            arn: arn:aws:cognito-idp:us-east-1:572031701257:userpool/us-east-1_e1vVtAD6r
     environment:
       restaurants_table: restaurants
 
